--- a/PatientProject/Angular/src/styles.css
+++ b/PatientProject/Angular/src/styles.css
@@ -1,1 +1,67 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~primeicons/primeicons.css';
+@import '~primeng/resources/themes/nova-light/theme.css';
+@import '~primeng/resources/primeng.min.css';
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+a{
+  margin-top: 20px !important;
+    padding: 1rem !important;
+    color: white !important;
+    font-size: 16px;
+}
+
+.navbar{
+padding-top:  2px; ;
+}
+
+.ui-toolbar{
+  background-color: darkblue !important;
+  height: 60px;
+padding-top: 20px;}
+
+.ui-card{
+  margin: auto;
+  max-width: 500px;
+  text-align: center;
+}
+
+ .signup-card-content{
+  align-content: center;
+  text-align: center;
+  padding: 0px 60px 0px 70px;
+} 
+
+.adminTable{
+  margin: auto;
+  max-width: 1000px;
+}
+
+.SignupError{
+  max-width: 200px;
+  margin: auto;
+  text-align: center;
+  background-color: yellow;
+  color: black;
+
+}
+
+.ui-dialog-titlebar{
+  height: 80px;
+  text-align: center;
+  font-size: 20px;
+}
+
+
+
+
+
+/* a{
+  text-align: center;
+  cursor: pointer;
+} */
+
